--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         alt="Your GIF description"
         draggable="false">
 
-    <span>How are you feeling Alisha?</span>
+    <span>How are you feeling [enter name]?</span>
 
     <div>
         <button> happy <3 </button>
